--- a/main.kv
+++ b/main.kv
@@ -1,30 +1,40 @@
-MDBottomNavigation:
-	MDBottomNavigationItem:
-		text: "Logga"
-		name: "logga"
-		icon: "account-circle"
-		BoxLayout:
-			Button:
-			Button:
-			Button:
-		
-	MDBottomNavigationItem:
-		text: 'Se din p\u00e5verkan'
-		name: "se"
-		icon: "account-cash"
-		BoxLayout:
-			orientation: 'vertical'
-			Button:
-			Button:
-			Button:
+MDBoxLayout:
+	adaptive_height: False
+	
+	
+
+	MDBottomNavigation:
+		MDBottomNavigationItem:
+			text: "Logga"
+			name: "logga"
+			icon: "account-circle"
+			BoxLayout:
+				orientation: 'vertical'
+				MDLabel:
+					id:response
+					text:"Test hej hej hej hej hej hjag heter barre och jag tycker om att äta korv till frukost"
+
+				MDTextField:
+					id: input
+					hint_text:"Hej"			
+				MDFillRoundFlatButton:
+					text_color: 1, 1, 1, 1
+					text:"korv"
+					on_press: app.press()
+			
+		MDBottomNavigationItem:
+			text: 'Se din p\u00e5verkan'
+			name: "se"
+			icon: "account-cash"
+			BoxLayout:
+				orientation: 'vertical'
+			
+
+		MDBottomNavigationItem:
+			text: 'Se din historik'
+			name: "se2"
+			icon: "account-cash"
+			BoxLayout:
+			
 
 
-	MDBottomNavigationItem:
-		text: 'Se din historik'
-		name: "se"
-		icon: "account-cash"
-		BoxLayout:
-			Button:
-				text: 'Har har du hur mycket koldioxid du har slappt ut.' 
-			Button:
-			Button:
