--- a/hack.kv
+++ b/hack.kv
@@ -2,26 +2,34 @@ MDBoxLayout:
 	adaptive_height: False
 
 	MDBottomNavigation:
+
 		MDBottomNavigationItem:
+
 			text: "Logga"
 			name: "logga"
 			icon: "account-circle"
 			BoxLayout:
+                pos_hint: {'center_x': .5}
 				orientation: 'vertical'
 				MDLabel:
 					id:response
 					text:"Jag vill logga:"
 
-                MDDropDownMenu:
-                    caller:
+                BoxLayout:
+                    orientation: 'horizontal'
 
 
-                MDDropDownItem:
-                    id: drop_item
-                    pos_hint: {'center_x': .5, 'center_y': .5}
-                    text: 'Item'
-                    on_release: self.set_item("New Item")
+                    MDRaisedButton:
+                        text: "Transport"
+                        pos_hint:{'center_x': 0, 'center_y': .5 }
+                        md_bg_color: 0,0,0,.5
+                        on_press: app.trans_press()
 
+                    MDRaisedButton:
+                        text: "Mat"
+                        pos_hint:{'center_x': 0, 'center_y': .5 }
+                        md_bg_color: 0,0,0,1
+                        on_press: app.mat_press()
 
 
 				MDTextField:
