Enabled user to input transport and distance

--- a/hack.kv
+++ b/hack.kv
@@ -37,6 +37,10 @@ MDBoxLayout:
                         md_bg_color: 1,1,1,1
                         on_press: app.mat_press()
 
+                MDLabel:
+                    text:""
+                    halign: "center"
+                    id: translabel
 
                 MDBoxLayout:
                     orientation:'horizontal'
