--- a/hack.kv
+++ b/hack.kv
@@ -7,7 +7,7 @@ MDBoxLayout:
 
 			text: "Logga"
 			name: "logga"
-			icon: "account-circle"
+			icon: "file-document"
 			MDBoxLayout:
 
 
@@ -56,13 +56,13 @@ MDBoxLayout:
 		MDBottomNavigationItem:
 			text: 'Se din p\u00e5verkan'
 			name: "se"
-			icon: "account-cash"
+			icon: "chart-line"
 			BoxLayout:
 				orientation: 'vertical'
 
 
 		MDBottomNavigationItem:
-			text: 'Se din historik'
+			text: 'Inställningar'
 			name: "se2"
-			icon: "account-cash"
+			icon: "cog"
 			BoxLayout:
