--- a/hack.kv
+++ b/hack.kv
@@ -75,6 +75,14 @@ MDBoxLayout:
                     source: app.image
                     size: self.texture_size
 
+                MDLabel:
+                    id: mess
+                    text:app.message
+                MDLabel:
+                    id: tree
+                    text:'Det tar 100 träd för att kompensera dina utsläpp på ett år'
+
+
                 MDRaisedButton:
                     md_bg_color: 1,1,1,1
                     text: 'uppdatera'
